# Qucs-RFlayout

./: .editorconfig  .gitignore  .lgtm.yml  .sonar-project.properties  .travis.yml  4main.cpp  CHANGELOG  CHANGELOG.new  CMakeLists.txt  Makefile  Qucs-RFlayout.pro  README.md  RELEASE.md  converter.cpp  default.nix  element.cpp  element.h  eqn.cpp  eqn.h  flake.nix  layoutwriter.cpp  layoutwriter.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcorn.cpp  mcorn.h  mcoupled.cpp  mcoupled.h  mcross.cpp  mcross.h  mgap.cpp  mgap.h  mlin.cpp  mlin.h  mmbend.cpp  mmbend.h  (+25 more)
.github/: FUNDING.yml
.github/workflows/: release-debian.yml  release-linux.yml  release-windows.yml  test-codeql.yml  test-openems.yml  test-sonarcloud.yml
cmake/: Catch.cmake  ClangFormat.cmake  FixedShell.cmake  Gzip.cmake  Latex.cmake  Package.cmake
debian/: changelog  control  rules
doc/: CMakeLists.txt  qucsrflayout.1.cmake.in  qucsrflayout.1.in  qucsrflayout.1.qmake.in
doc/latex/: CMakeLists.txt  detail_mcorn.tex  detail_mcoupled.tex  detail_mcross.tex  detail_mlin.tex  detail_mmbend.tex  detail_mrstub.tex  detail_mtee.tex  oems_mesh_mcorn.tex  oems_mesh_mcoupled.tex  oems_mesh_mcross.tex  oems_mesh_mgap.tex  oems_mesh_mlin.tex  oems_mesh_mmbend.tex  oems_mesh_mopen.tex  oems_mesh_mrstub.tex  oems_mesh_mstep.tex  oems_mesh_mtee.tex  oems_mesh_mvia.tex  oems_mesh_pac.tex  table_orientation.tex  topology_mcorn.tex  topology_mcoupled.tex  topology_mcross.tex  topology_mgap.tex  topology_mlin.tex  topology_mmbend.tex  topology_mopen.tex  topology_mrstub.tex  topology_mstep.tex  topology_mtee.tex  topology_mvia.tex
doc/tutorials/: openems.md
microstrip/: element.cpp  element.h  eqn.cpp  eqn.h  mcorn.cpp  mcorn.h  mcoupled.cpp  mcoupled.h  mcross.cpp  mcross.h  mgap.cpp  mgap.h  microstrip.h  mlin.cpp  mlin.h  mmbend.cpp  mmbend.h  mopen.cpp  mopen.h  mrstub.cpp  mrstub.h  mstep.cpp  mstep.h  mtee.cpp  mtee.h  mvia.cpp  mvia.h  pac.cpp  pac.h  subst.cpp  subst.h
pack/: CMakeLists.txt  Dockerfile.unix  Dockerfile.win32  qucsrflayout.desktop  qucsrflayout.rc
patch/csxcad/: DESCRIPTION
patch/openems/: DESCRIPTION
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  changelog.hpp.in  converter.cpp  converter.h  converter.hpp  data.cpp  data.hpp  layoutstrings.cpp  layoutstrings.hpp  layoutwriter.cpp  layoutwriter.cpp.old  layoutwriter.h  layoutwriter.hpp  logger.cpp  logger.h  logger.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  oemsline.cpp  oemsline.hpp  oemsmesh.cpp  oemsmesh.hpp  preview.cpp  preview.h  preview.hpp  resources.qrc  schparser.cpp  schparser.h  schparser.hpp  version.h  version.hpp  xycalculator.cpp  xycalculator.h  xycalculator.hpp
src/microstrip/: element.cpp  element.h  element.hpp  eqn.cpp  eqn.h  eqn.hpp  mcorn.cpp  mcorn.h  mcorn.hpp  mcoupled.cpp  mcoupled.h  mcoupled.hpp  mcross.cpp  mcross.h  mcross.hpp  mgap.cpp  mgap.h  mgap.hpp  microstrip.hpp  mlin.cpp  mlin.h  mlin.hpp  mmbend.cpp  mmbend.h  mmbend.hpp  mopen.cpp  mopen.h  mopen.hpp  mrstub.cpp  mrstub.h  mrstub.hpp  mstep.cpp  mstep.h  mstep.hpp  mtee.cpp  mtee.h  mtee.hpp  mvia.cpp  mvia.h  mvia.hpp  (+7 more)
test/: CMakeLists.txt  Dockerfile.openems  MStest.kicad_pcb  MStest.sch  preview.sch
test/lpf/: lpf.sch  lpf_measure.s2p  lpf_openems.s2p
test/patch/: patch.net  patch.sch
test/stub/: stub.sch  stub_measure.s2p  stub_openems.s2p
test/unit/: test.cpp  test_schparser.cpp
test/unit/microstrip/: test_mcorn.cpp  test_mcoupled.cpp  test_mcross.cpp  test_mgap.cpp  test_mlin.cpp  test_mmbend.cpp  test_mopen.cpp  test_mrstub.cpp  test_mstep.cpp  test_mtee.cpp  test_mvia.cpp
